@@ -24,7 +24,6 @@ import cuchaz.enigma.translation.representation.entry.MethodEntry;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class MappingsChecker {
 	private final JarIndex index;
@@ -40,7 +39,7 @@ public class MappingsChecker {
 
 		Collection<Entry<?>> obfEntries = mappings.getAllEntries()
 				.filter(e -> e instanceof ClassEntry || e instanceof MethodEntry || e instanceof FieldEntry || e instanceof LocalVariableEntry)
-				.collect(Collectors.toList());
+				.toList();
 
 		progress.init(obfEntries.size(), "Checking for dropped mappings");
 
@@ -76,7 +75,7 @@ public class MappingsChecker {
 		private final Map<Entry<?>, String> droppedMappings = new HashMap<>();
 
 		public void drop(Entry<?> entry, EntryMapping mapping) {
-			droppedMappings.put(entry, mapping.getTargetName());
+			droppedMappings.put(entry, mapping.targetName() != null ? mapping.targetName() : entry.getName());
 		}
 
 		void apply(EntryTree<EntryMapping> mappings) {
